# Haskell-course

./: README.md
u0/u0-kubanek/: Main.hs
u1/u1-kubaneko/: u1-kubaneko.cabal
u2/u2-kubaneko/: u2-kubaneko.cabal
u2/u2-kubaneko/app/: BenAndJSON.hs  BenCheck.hs  Main.hs  Parser.hs
u3/u3-kubaneko/: u3-kubaneko.cabal
u3/u3-kubaneko/app/: Main.hs  display.hs
